extracted strings